syntax = "proto3"; 
package bigmap;
import "common.proto";
import "troops.proto";
option go_package = "server/msgproto/bigmap";





//消息号
enum MSG_BIGMAP {
    PLACEHOLDER_MAP =0;  //占位
    //大地图模块
    Module_BIGMAP  = 2000;
    
    //区域信息
    S2C_AreasInfo = 2010;//

     
    //移动
    C2S_Move    = 2030;
    S2C_Move    = 2031;
    //暂停移动
    C2S_StopMoving= 2032;
    //S2C_StopMoving= 2033;
    
    //触发战斗通知
    S2C_Fight  =2041;
    S2C_OverFight  =2042;

    //获取区域简迅 区域战斗双方部队数据
    C2S_AreasSimple  = 2051;
    S2C_AreasSimple  = 2052;

    //订阅战斗区域
    C2S_FightSubscribe = 2053;
    //取消订阅 
    C2S_FightCancelSubscribe = 2054;
    //订阅后 区域战斗队列推送 
    S2C_FightSubscribe = 2055;
    //部队详细信息 (上阵时推送)
    S2C_QueueTroopsInfo = 2056;
    //部队进入区域队列
    S2C_EntryQueue  = 2057;
    //部队离开区域队列
    S2C_LeaveQueue = 2058;    
   

    //启动战斗测试用接口
    //C2S_StartFight =2070;
    
    //离开区域 (撤退 突进 单挑)
    //C2S_TroopsLeaveAreas = 2057;
}



//区域信息
message P_AreasInfo {
    int32 AreasIndex = 1;//区域ID
    int32 Type = 2; //0 中立  1-3 国家KEY
    int32 State = 3;//区域状态 0:无  1:战斗中

}


//区域信息 
message s2c_AreasInfo {
    repeated P_AreasInfo AreasInfoList =1 ;      
}

 

//移动
message c2s_Move {
    int32 TroopsID = 1;//部队ID
    repeated int32 AreasList = 2;//路径 区域ID
}

message s2c_Move {
    int32 TroopsID = 1;     //部队ID
    int32 AreasIndex = 2;   //当前行进区域ID
    int64 ArrivalTime =3;   //预计到达时间时间戳
    int32 State =4; //部队状态 0启动移动  
}



//暂停移动
message c2s_StopMoving {
    int32 TroopsID = 1;     //部队ID 
}

  
//部队进入战斗
message s2c_Fight {
    int32 TroopsID = 1;     //部队ID
}

message s2c_OverFight {
    int32 AreasIndex = 1;  //区域ID
    int32 Victory = 2;  //胜方 1 守方 2攻方
}



//订阅战斗区域
message c2s_FightSubscribe {
    int32 AreasIndex =1; //区域index
} 

//区域战斗信息 (部队前两位详细信息,未上阵部队只有ID与部队名称)
message s2c_FightSubscribe {
    repeated troops.P_Troops  AttackTroopsList= 1;  //攻方上阵部队
    repeated troops.P_Troops  DefenseTroopsList= 2;  //守方上阵部队
    int64 fightStamp =3;//下轮战斗时间戳
    string msg =4;
}

//部队详细信息
message s2c_QueueTroopsInfo {
    repeated troops.P_Troops  AttackTroopsList= 1;  //攻方上阵部队
    repeated troops.P_Troops  DefenseTroopsList= 2;  //守方上阵部队
}

//部队进入区域战斗队列
message s2c_EntryQueue {
    int32 AreasIndex = 1;
    troops.P_Troops Troops = 2; 
    int32 Queue =3;//队列 0 守方  1 攻方    
    int32 Type =4;//类型(预留)
}

//部队离开区域队列
message s2c_LeaveQueue {
    int32 AreasIndex = 1;
    int32 TroopsID =2;
}


 

//离开区域 (撤退 突进)
//message c2s_TroopsLeaveAreas {
//    int32 TroopsID =1;
//    int32 Type =2;//类型(预留)
//}


//查看区域 简讯
message c2s_AreasSimple {
    int32 AreasIndex =1; //区域index
}
message s2c_AreasSimple {
    int32 AreasIndex    =1; //区域index
    map<int32, int32>  TroopsNumList = 2;//部队数量列表,<国家，数量>
}
     
 


//取消订阅
message c2s_FightCancelSubscribe {
    int32 AreasIndex =1; //区域index
}

