syntax = "proto3";
package common;
option go_package = "slgserver/msgproto/common";

 



message NetworkMsg{
  int32 Module =1;
  int32 Method =2;
  bytes MsgBytes =3;
}



//部队状态
enum TroopsState{
  StandBy = 0; //等待命令
  Move =1;  //移动中
  Pause =2; //暂停
  Stationed =3;//原地驻扎
  fight =4; //战斗
}