syntax = "proto3"; 
package fight;
import "common.proto";
option go_package = "server/msgproto/fight";

//消息号
enum MSG_FIGHT {
    PLACEHOLDER_FIGHT =0;  //占位
    Module_FIGHT  = 4000;
    
    C2S_Auto_Select = 4001;
    S2C_Auto_Select = 4002;

    //选择战术
    C2S_Select_Tactics =4003;
    S2C_Select_Tactics =4004;


    //战斗记录推送
    S2C_FightRecordPush = 4010;
}

//自动选择
message c2s_AutoSelect {
    bool AutoSelect  =1; //自动，手动
}

message s2c_AutoSelect {
    bool AutoSelect  =1;
    string msg =2;
}


//战术选择
message c2s_SelectTactics {
    int32 troopsID = 1;//部队id
    int32 SkillID = 2;
    int32 TacticsID = 3;//手动选择战术ID
}

message s2c_SelectTactics {
    int32 troopsID = 1;//部队id
    int32 SelectSkill = 2;//是否可选技能 0 都可选 1 战术可选 2 都不可选
    string msg = 3;//error msg
}





//战斗记录推送
message s2c_FightRecordPush {
    repeated p_FightRecord Record =1;   //当前排战斗记录
    int64 fightStamp = 2;    //下轮战斗时间戳    
    int32 attackTacticsID =3; //攻方战术
    int32 defenseTacticsID =4; //守方战术
}

message p_FightRecord {
    int32 TroopsID = 1;     //施法者ID
    int32 Type =2;   //0 普攻  1 战法（技能） 2 战术 3 BUFF
    int32 Value=3;  //
    repeated p_FightItem attack  = 4;    //攻方受击
    repeated p_FightItem defense  = 5;   //守方受击
}

message p_FightItem{
    int32 troopsID  =1;//部队ID
    int32 rolw      =2;//第几排
    int32 loss      =3;//扣掉血量 
    bool dead       =4;//死亡
    int32 bufid     =5;
}
